# music-rec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: create-diagram.yml
lib/include/: ApplicationController.h  MusicLibraryProcessor.h  Song.h  SpotifyClient.h
lib/src/: ApplicationController.cpp  MusicLibraryProcessor.cpp  Song.cpp  SpotifyClient.cpp
